--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <body>
     <div class="container">
         <div class="drawingSpace"></div>
+        <div class="controls">
+            <button draggable="false" id="changeGridSize">Change Grid Size</button>
+        </div>
     </div>
     <script src="main.js"></script>
 </body>
