--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="#">
     <title>Etch a sketch</title>
 </head>
-<body>
+<body ondragstart="return false;" ondrop="return false;">
     <div class="container">
         <div class="drawingSpace"></div>
         <div class="controls">
