--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 </head>
 <body ondragstart="return false;" ondrop="return false;">
     <div class="container">
-        <div class="drawingSpace"></div>
         <div class="controls">
             <button draggable="false" id="changeGridSize">Change Grid Size</button>
+            <input type="color" value="black" id="colorPicker">
         </div>
+        <div class="drawingSpace"></div>
     </div>
     <script src="main.js"></script>
 </body>
