Stylized the page, added "ERASE GRID" button

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 <body ondragstart="return false;" ondrop="return false;">
     <div class="container">
         <div class="controls">
-            <button draggable="false" id="changeGridSize">Change Grid Size</button>
             <input type="color" value="black" id="colorPicker">
+            <button id="changeGridSize">CHANGE GRID SIZE</button>
+            <button id="eraseGrid">ERASE GRID</button>
         </div>
         <div class="drawingSpace"></div>
     </div>
