--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <input type="color" value="black" id="colorPicker">
             <button id="changeGridSize">CHANGE GRID SIZE</button>
             <button id="eraseGrid">ERASE GRID</button>
+            <button id="rainbowMode">RAINBOW MODE</button>
         </div>
         <div class="drawingSpace"></div>
     </div>
