Added eraser mode

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
             <input type="color" value="black" id="colorPicker">
             <button id="changeGridSize">CHANGE GRID SIZE</button>
             <button id="eraseGrid">ERASE GRID</button>
-            <button id="rainbowMode">RAINBOW MODE</button>
+            <button id="eraserMode">TOGGLE ERASER</button>
+            <button id="rainbowMode">TOGGLE RAINBOW</button>
         </div>
         <div class="drawingSpace"></div>
     </div>
